RESOLVED FIXED205633
[LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/white-space-wrap-after-nowrap-001.html
https://bugs.webkit.org/show_bug.cgi?id=205633
Summary [LFC][IFC] Fix imported/w3c/web-platform-tests/css/css-text/white-space/white...
alan
Reported 2019-12-29 16:24:32 PST
Connect the revert patches.
Attachments
Patch (18.65 KB, patch)
2019-12-29 16:39 PST, alan
no flags
Patch (18.75 KB, patch)
2019-12-30 09:07 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2019-12-29 16:24:50 PST
alan
Comment 2 2019-12-29 16:39:58 PST
alan
Comment 3 2019-12-30 09:07:10 PST
WebKit Commit Bot
Comment 4 2019-12-30 10:25:44 PST
Comment on attachment 386537 [details] Patch Clearing flags on attachment: 386537 Committed r253948: <https://trac.webkit.org/changeset/253948>
WebKit Commit Bot
Comment 5 2019-12-30 10:25:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.