Source/WebCore/layout/inlineformatting/LineLayoutContext.h
@@ -54,14 +54,15 @@ public:
     using FloatList = Vector<WeakPtr<InlineItem>>;
 
 private:
-    struct CommittedContent {
-        LineBreaker::IsEndOfLine isEndOfLine { LineBreaker::IsEndOfLine::No };
-        size_t count { 0 };
-        Optional <LineContent::PartialContent> partialContent;
-    };
     LineCandidateContent nextContentForLine(unsigned inlineItemIndex, Optional<unsigned> overflowLength, InlineLayoutUnit currentLogicalRight);
-    CommittedContent addFloatItems(LineBuilder&, const FloatList&);
-    CommittedContent checkForLineWrapAndCommit(LineBreaker&, LineBuilder&, const LineBreaker::RunList&);
+    struct Result {
+        LineBreaker::IsEndOfLine isEndOfLine { LineBreaker::IsEndOfLine::No };
+        size_t committedCount { 0 };
+        Optional <LineContent::PartialContent> partialContent { };
+        const InlineItem* revertTo { nullptr };
+    };
+    Result tryAddingFloatItems(LineBuilder&, const FloatList&);
+    Result tryAddingInlineItems(LineBreaker&, LineBuilder&, const LineBreaker::RunList&);
     void commitContent(LineBuilder&, const LineBreaker::RunList&, Optional<LineBreaker::Result::PartialTrailingContent>);
     LineContent close(LineBuilder&, unsigned leadingInlineItemIndex, unsigned committedInlineItemCount, Optional<LineContent::PartialContent>);
 
